--- a/optional.object.ctor.html
+++ b/optional.object.ctor.html
@@ -6,7 +6,7 @@ constexpr optional(nullopt_t) noexcept;
 No contained value is initialized.
 For every object type <span class='texttt'>T</span> these constructors shall be <span class='texttt'>constexpr</span> constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional!constructor'></a></span><code class='itemdecl'>
-optional(const optional&lt;T&gt;&amp; rhs);
+optional(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_copy_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>rhs</span> contains a value, initializes the contained value as if
@@ -14,7 +14,7 @@ direct-non-list-initializing an object of type <span class='texttt'>T</span> wit
 <span class='texttt'>bool(rhs) == bool(*this)</span>.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional!constructor'></a></span><code class='itemdecl'>
-optional(optional&lt;T&gt;&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
+optional(optional&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_move_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>rhs</span> contains a value, initializes the contained value as if
