--- a/optional.object.html
+++ b/optional.object.html
@@ -67,7 +67,7 @@ constexpr optional(nullopt_t) noexcept;
 No contained value is initialized.
 For every object type <span class='texttt'>T</span> these constructors shall be <span class='texttt'>constexpr</span> constructors (<a href='dcl.constexpr'>[dcl.constexpr]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional!constructor'></a></span><code class='itemdecl'>
-optional(const optional&lt;T&gt;&amp; rhs);
+optional(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='ctor-3'><div class='marginalizedparent'><a class='marginalized' href='#ctor-3'>3</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_copy_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='ctor-4'><div class='marginalizedparent'><a class='marginalized' href='#ctor-4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>rhs</span> contains a value, initializes the contained value as if
@@ -75,7 +75,7 @@ direct-non-list-initializing an object of type <span class='texttt'>T</span> wit
 <span class='texttt'>bool(rhs) == bool(*this)</span>.</p></div></div><div class='para' id='ctor-6'><div class='marginalizedparent'><a class='marginalized' href='#ctor-6'>6</a></div><div class='itemdescr'><p ><i>Throws:</i>
 Any exception thrown by the selected constructor of <span class='texttt'>T</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='optional!constructor'></a></span><code class='itemdecl'>
-optional(optional&lt;T&gt;&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
+optional(optional&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='ctor-7'><div class='marginalizedparent'><a class='marginalized' href='#ctor-7'>7</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_move_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='ctor-8'><div class='marginalizedparent'><a class='marginalized' href='#ctor-8'>8</a></div><div class='itemdescr'><p ><i>Effects:</i>
 If <span class='texttt'>rhs</span> contains a value, initializes the contained value as if
@@ -131,7 +131,7 @@ If <span class='texttt'>*this</span> contains a value, calls <span class='texttt
 <span class='texttt'>*this</span>.</p></div></div><div class='para' id='assign-3'><div class='marginalizedparent'><a class='marginalized' href='#assign-3'>3</a></div><div class='itemdescr'><p ><i>Postcondition:</i>
 <span class='texttt'>*this</span> does not contain a value.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!optional'></a></span><span class='indexparent'><a class='index' id='optional!operator='></a></span><code class='itemdecl'>
-optional&lt;T&gt;&amp; operator=(const optional&lt;T&gt;&amp; rhs);
+optional&lt;T&gt;&amp; operator=(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='assign-4'><div class='marginalizedparent'><a class='marginalized' href='#assign-4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_copy_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span> and <span class='texttt'>is_copy_assignable_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='assign-5'><div class='marginalizedparent'><a class='marginalized' href='#assign-5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i>
 See Table <a href='#tab:optional.assign.copy'>[tab:optional.assign.copy]</a>.
@@ -177,7 +177,7 @@ If an exception is thrown during the call to <span class='texttt'>T</span>'s cop
 If an exception is thrown during the call to <span class='texttt'>T</span>'s copy assignment,
 the state of its contained value is as defined by the exception safety guarantee of <span class='texttt'>T</span>'s copy assignment.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!optional'></a></span><span class='indexparent'><a class='index' id='optional!operator='></a></span><code class='itemdecl'>
-optional&lt;T&gt;&amp; operator=(optional&lt;T&gt;&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
+optional&lt;T&gt;&amp; operator=(optional&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='assign-9'><div class='marginalizedparent'><a class='marginalized' href='#assign-9'>9</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_move_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span> and <span class='texttt'>is_move_assignable_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='assign-10'><div class='marginalizedparent'><a class='marginalized' href='#assign-10'>10</a></div><div class='itemdescr'><p ><i>Effects:</i>
 See Table <a href='#tab:optional.assign.move'>[tab:optional.assign.move]</a>.
@@ -255,7 +255,7 @@ Any exception thrown by the selected constructor of <span class='texttt'>T</span
 If an exception is thrown during the call to <span class='texttt'>T</span>'s constructor, <span class='texttt'>*this</span> does not contain a value, and the previous <span class='texttt'>*val</span> (if any) has been destroyed.
 This function shall not participate in overload resolution unless <span class='texttt'>is_constructible_v&lt;T, initializer_list&lt;U&gt;&amp;, Args&amp;&amp;...&gt;</span> is <span class='texttt'>true</span>.
 </p></div></div></div><div id='swap'><h4 ><a class='secnum' href='#swap' style='min-width:118pt'>20.6.3.4</a> Swap <a class='abbr_ref' href='optional.object.swap'>[optional.object.swap]</a></h4><p ><span class='indexparent'><a class='index' id='swap!optional'></a></span><span class='indexparent'><a class='index' id='optional!swap'></a></span><code class='itemdecl'>
-void swap(optional&lt;T&gt;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
+void swap(optional&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='swap-1'><div class='marginalizedparent'><a class='marginalized' href='#swap-1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i>
 Lvalues of type <span class='texttt'>T</span> shall be swappable and <span class='texttt'>is_move_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='swap-2'><div class='marginalizedparent'><a class='marginalized' href='#swap-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 See Table <a href='#tab:optional.swap'>[tab:optional.swap]</a>.
