--- a/optional.object.assign.html
+++ b/optional.object.assign.html
@@ -5,7 +5,7 @@ If <span class='texttt'>*this</span> contains a value, calls <span class='texttt
 <span class='texttt'>*this</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Postcondition:</i>
 <span class='texttt'>*this</span> does not contain a value.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!optional'></a></span><span class='indexparent'><a class='index' id='optional!operator='></a></span><code class='itemdecl'>
-optional&lt;T&gt;&amp; operator=(const optional&lt;T&gt;&amp; rhs);
+optional&lt;T&gt;&amp; operator=(const optional&amp; rhs);
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_copy_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span> and <span class='texttt'>is_copy_assignable_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i>
 See Table <a href='#tab:optional.assign.copy'>[tab:optional.assign.copy]</a>.
@@ -51,7 +51,7 @@ If an exception is thrown during the call to <span class='texttt'>T</span>'s cop
 If an exception is thrown during the call to <span class='texttt'>T</span>'s copy assignment,
 the state of its contained value is as defined by the exception safety guarantee of <span class='texttt'>T</span>'s copy assignment.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!optional'></a></span><span class='indexparent'><a class='index' id='optional!operator='></a></span><code class='itemdecl'>
-optional&lt;T&gt;&amp; operator=(optional&lt;T&gt;&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
+optional&lt;T&gt;&amp; operator=(optional&amp;&amp; rhs) noexcept(<i><span class='texttt'>see below</span></i>);
 </code></p><div class='itemdescr'></div><div class='para' id='9'><div class='marginalizedparent'><a class='marginalized' href='#9'>9</a></div><div class='itemdescr'><p ><i>Requires:</i>
 <span class='texttt'>is_move_constructible_v&lt;T&gt;</span> is <span class='texttt'>true</span> and <span class='texttt'>is_move_assignable_v&lt;T&gt;</span> is <span class='texttt'>true</span>.</p></div></div><div class='para' id='10'><div class='marginalizedparent'><a class='marginalized' href='#10'>10</a></div><div class='itemdescr'><p ><i>Effects:</i>
 See Table <a href='#tab:optional.assign.move'>[tab:optional.assign.move]</a>.
