--- a/path.assign.html
+++ b/path.assign.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html><html lang='en'><head><title>[path.assign]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>27</a> Input/output library <a class='abbr_ref' href='./#input.output'>[input.output]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>27.10</a> File systems <a class='abbr_ref' href='filesystems#path.assign'>[filesystems]</a></h2><h3 ><a class='secnum' style='min-width:103pt'>27.10.8</a> Class <span class='texttt'>path</span> <a class='abbr_ref' href='class.path#path.assign'>[class.path]</a></h3><h4 ><a class='secnum' style='min-width:118pt'>27.10.8.4</a> <span class='texttt'>path</span> members <a class='abbr_ref' href='path.member#path.assign'>[path.member]</a></h4><div id='path.assign'><h4 ><a class='secnum' style='min-width:133pt'>27.10.8.4.2</a> <span class='texttt'>path</span> assignments <a class='abbr_ref'>[path.assign]</a></h4><p ><span class='indexparent'><a class='index' id='operator=!path'></a></span><span class='indexparent'><a class='index' id='path!operator='></a></span><code class='itemdecl'>
 path&amp; operator=(const path&amp; p);
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> If <span class='texttt'>*this</span> and <span class='texttt'>p</span> are the same
-object, has no effect. Otherwise, modifies <span class='texttt'>pathname</span> to have the
-original value of <span class='texttt'>p.pathname</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
+object, has no effect. Otherwise, modifies <span class='texttt'>pathstring</span> to have the
+original value of <span class='texttt'>p.pathstring</span>.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!path'></a></span><span class='indexparent'><a class='index' id='path!operator='></a></span><code class='itemdecl'>
 path&amp; operator=(path&amp;&amp; p) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> If <span class='texttt'>*this</span> and <span class='texttt'>p</span> are the same
-object, has no effect. Otherwise, modifies <span class='texttt'>pathname</span> to have the
-original value of <span class='texttt'>p.pathname</span>. <span class='texttt'>p</span> is left in a
+object, has no effect. Otherwise, modifies <span class='texttt'>pathstring</span> to have the
+original value of <span class='texttt'>p.pathstring</span>. <span class='texttt'>p</span> is left in a
 valid but unspecified state.
 [&nbsp;<i>Note:</i><span class='space'></span> A valid implementation is <span class='texttt'>swap(p)</span>. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!path'></a></span><span class='indexparent'><a class='index' id='path!operator='></a></span><span class='indexparent'><a class='index' id='assign!path'></a></span><span class='indexparent'><a class='index' id='path!assign'></a></span><code class='itemdecl'>
 path&amp; operator=(string_type&amp;&amp; source);
 path&amp; assign(string_type&amp;&amp; source);
-</code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i> Modifies <span class='texttt'>pathname</span> to have the original value of <span class='texttt'>source</span>.
+</code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i> Modifies <span class='texttt'>pathstring</span> to have the original value of <span class='texttt'>source</span>.
 <span class='texttt'>source</span> is left in a valid but unspecified state.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='operator=!path'></a></span><span class='indexparent'><a class='index' id='path!operator='></a></span><span class='indexparent'><a class='index' id='assign!path'></a></span><span class='indexparent'><a class='index' id='path!assign'></a></span><code class='itemdecl'>
 template &lt;class Source&gt;
@@ -23,6 +23,6 @@ template &lt;class Source&gt;
 template &lt;class InputIterator&gt;
   path&amp; assign(InputIterator first, InputIterator last);
 </code></p><div class='itemdescr'></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i> Stores the effective range of <span class='texttt'>source</span> (<a href='path.req'>[path.req]</a>)
-or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathname</span>,
+or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathstring</span>,
 converting format and encoding if required (<a href='path.cvt'>[path.cvt]</a>).</p></div></div><div class='para' id='8'><div class='marginalizedparent'><a class='marginalized' href='#8'>8</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
 </p></div></div></div></div></body></html>
