--- a/path.construct.html
+++ b/path.construct.html
@@ -6,13 +6,13 @@ path(const path&amp; p);
 path(path&amp;&amp; p) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs an object of class <span class='texttt'>path</span> with
-<span class='texttt'>pathname</span> having the original value of <span class='texttt'>p.pathname</span>.
+<span class='texttt'>pathstring</span> having the original value of <span class='texttt'>p.pathstring</span>.
 In the second form, <span class='texttt'>p</span> is left in a valid but unspecified state.
 </p></div></div><p ><span class='indexparent'><a class='index' id='path!constructor'></a></span><code class='itemdecl'>
 path(string_type&amp;&amp; source);
 </code></p><div class='itemdescr'></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs an object of class <span class='texttt'>path</span> with
-<span class='texttt'>pathname</span> having the original value of <span class='texttt'>source</span>.
+<span class='texttt'>pathstring</span> having the original value of <span class='texttt'>source</span>.
 <span class='texttt'>source</span> is left in a valid but unspecified state.
 </p></div></div><p ><span class='indexparent'><a class='index' id='path!constructor'></a></span><code class='itemdecl'>
 template &lt;class Source&gt;
@@ -20,7 +20,7 @@ template &lt;class Source&gt;
 template &lt;class InputIterator&gt;
   path(InputIterator first, InputIterator last);
 </code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs an object of class <span class='texttt'>path</span>, storing the effective range of <span class='texttt'>source</span> (<a href='path.req'>[path.req]</a>)
-  or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathname</span>,
+  or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathstring</span>,
   converting format and encoding if required (<a href='path.cvt'>[path.cvt]</a>).
 </p></div></div><p ><span class='indexparent'><a class='index' id='path!constructor'></a></span><code class='itemdecl'>
 template &lt;class Source&gt;
@@ -31,7 +31,7 @@ template &lt;class InputIterator&gt;
 The value type of <span class='texttt'>Source</span> and <span class='texttt'>InputIterator</span> is
 <span class='texttt'>char</span>.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Effects:</i> Constructs an object of class <span class='texttt'>path</span>,
 storing the effective range of <span class='texttt'>source</span>
-or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathname</span>,
+or the range <span class='texttt'>[first, <span class='discretionary'></span>last)</span> in <span class='texttt'>pathstring</span>,
 after converting format if required and after converting the encoding as
 follows:
 </p><ul ><li ><p >If <span class='texttt'>value_type</span> is <span class='texttt'>wchar_t</span>, converts to the native
@@ -54,13 +54,13 @@ fs::create_directory(fs::path(latin1_string, latin1_locale));
 <span class='texttt'>latin1_string</span> to a wide character string in the native wide
 encoding (<a href='fs.def.native.encode'>[fs.def.native.encode]</a>). The resulting wide string is then
 converted to a narrow character
-<span class='texttt'>pathname</span> string in the current native narrow encoding. If the
+<span class='texttt'>pathstring</span> string in the current native narrow encoding. If the
 native wide encoding is UTF-16 or UTF-32, and the current native narrow
 encoding is UTF-8, all of the characters in the ISO/IEC 8859-1 character set
 will be converted to their Unicode representation, but for other native
 narrow encodings some characters may have no representation.</p><p >For Windows-based operating systems, the path is constructed by
 using <span class='texttt'>latin1_facet</span> to convert ISO/IEC 8859-1 encoded
-<span class='texttt'>latin1_string</span> to a UTF-16 encoded wide character <span class='texttt'>pathname</span>
+<span class='texttt'>latin1_string</span> to a UTF-16 encoded wide character <span class='texttt'>pathstring</span>
 string. All of the characters in the ISO/IEC 8859-1 character set will be
 converted to their Unicode representation.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]
