--- a/path.generic.obs.html
+++ b/path.generic.obs.html
@@ -8,7 +8,7 @@ template &lt;class EcharT, class traits = char_traits&lt;EcharT&gt;,
           class Allocator = allocator&lt;EcharT&gt;&gt;
   basic_string&lt;EcharT, traits, Allocator&gt;
     generic_string(const Allocator&amp; a = Allocator()) const;
-</code></p></div><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>pathname</span>, reformatted according to the generic
+</code></p></div><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>pathstring</span>, reformatted according to the generic
 pathname format (<a href='path.generic'>[path.generic]</a>).</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Remarks:</i> All memory allocation, including for the return value, shall
 be performed by <span class='texttt'>a</span>. Conversion, if any, is specified by
 <a href='path.cvt'>[path.cvt]</a>.
@@ -18,7 +18,7 @@ std::wstring generic_wstring() const;
 std::string generic_u8string() const;
 std::u16string generic_u16string() const;
 std::u32string generic_u32string() const;
-</code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>pathname</span>, reformatted according to the generic
+</code></p><div class='itemdescr'></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>pathstring</span>, reformatted according to the generic
 pathname format (<a href='path.generic'>[path.generic]</a>).</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Remarks:</i> Conversion, if any, is specified by <a href='path.cvt'>[path.cvt]</a>.
 The encoding of the string returned by <span class='texttt'>generic_u8string()</span> is always
 UTF-8.
