--- a/path.modifiers.html
+++ b/path.modifiers.html
@@ -41,7 +41,7 @@ std::cout &lt;&lt; path("/").replace_filename("bar");     <span class='comment'>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 </p></div></div><p ><span class='indexparent'><a class='index' id='replace_extension!path'></a></span><span class='indexparent'><a class='index' id='path!replace_extension'></a></span><code class='itemdecl'>
 path&amp; replace_extension(const path&amp; replacement = path());
-</code></p><div class='itemdescr'></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Effects:</i> <span class='texttt'>pathname</span> (the stored path) is modified as follows:
+</code></p><div class='itemdescr'></div><div class='para' id='11'><div class='marginalizedparent'><a class='marginalized' href='#11'>11</a></div><div class='itemdescr'><p ><i>Effects:</i> <span class='texttt'>pathstring</span> (the stored path) is modified as follows:
   </p><ul ><li ><p >Any existing <span class='texttt'>extension()(</span><a href='path.decompose'>[path.decompose]</a><span class='texttt'>)</span> is removed from the stored path,
     then
 </p></li><li ><p >If <span class='texttt'>replacement</span> is not empty and does not begin with a dot
@@ -50,6 +50,6 @@ path&amp; replace_extension(const path&amp; replacement = path());
   </p></li></ul></div></div><div class='para' id='12'><div class='marginalizedparent'><a class='marginalized' href='#12'>12</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>*this</span>.
 </p></div></div><p ><span class='indexparent'><a class='index' id='swap!path'></a></span><span class='indexparent'><a class='index' id='path!swap'></a></span><code class='itemdecl'>
 void swap(path&amp; rhs) noexcept;
-</code></p><div class='itemdescr'></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Effects:</i> Swaps the contents of the two paths <span class='texttt'>pathname</span> and
-<span class='texttt'>rhs.pathname</span>.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Complexity:</i> constant time.
+</code></p><div class='itemdescr'></div><div class='para' id='13'><div class='marginalizedparent'><a class='marginalized' href='#13'>13</a></div><div class='itemdescr'><p ><i>Effects:</i> Swaps the contents of the two paths <span class='texttt'>pathstring</span> and
+<span class='texttt'>rhs.pathstring</span>.</p></div></div><div class='para' id='14'><div class='marginalizedparent'><a class='marginalized' href='#14'>14</a></div><div class='itemdescr'><p ><i>Complexity:</i> constant time.
 </p></div></div></div></div></body></html>
