--- a/dcl.type.html
+++ b/dcl.type.html
@@ -491,7 +491,7 @@ that contains a placeholder type,
 and <span class='texttt'>e</span> is the operand of the <span class='texttt'>return</span> statement.
 If the <span class='texttt'>return</span> statement
 has no operand,
-then <span class='texttt'>e</span> is <span class='texttt'>void{}</span>;
+then <span class='texttt'>e</span> is <span class='texttt'>void()</span>;
 </p></li><li ><p >for a variable declared with a type
 that contains a placeholder type,
 <span class='texttt'>T</span> is the declared type of the variable
