--- a/input.output.html
+++ b/input.output.html
@@ -8564,7 +8564,7 @@ namespace std {
 #define stdin <i><span class='texttt'>see below</span></i>
 #define stdout <i><span class='texttt'>see below</span></i>
 
-namespace {
+namespace std {
   int remove(const char* filename);
   int rename(const char* old, const char* new);
   FILE* tmpfile();
