--- a/lex.html
+++ b/lex.html
@@ -39,11 +39,11 @@ Any
 source file character not in the basic source character
 set (<a href='lex.charset'>[lex.charset]</a>) is replaced by the
 <span class='indexparent'><a class='index' id='universal character name'></a></span><i ><a href='lex.charset#universal-character-name'>universal-character-name</a></i> that
-designates that character. (An implementation may use any internal
+designates that character. An implementation may use any internal
 encoding, so long as an actual extended character encountered in the
 source file, and the same extended character expressed in the source
 file as a <i ><a href='lex.charset#universal-character-name'>universal-character-name</a></i> (e.g., using the <span class='texttt'>\uXXXX</span> notation), are handled equivalently
-except where this replacement is reverted in a raw string literal.)</p><p ><span class='indexparent'><a class='index' id='line splicing'></a></span></p></li><li ><p >Each instance of a backslash character (\)
+except where this replacement is reverted (<a href='lex.pptoken'>[lex.pptoken]</a>) in a raw string literal.</p><p ><span class='indexparent'><a class='index' id='line splicing'></a></span></p></li><li ><p >Each instance of a backslash character (\)
 immediately followed by a new-line character is deleted, splicing
 physical source lines to form logical source lines. Only the last
 backslash on any physical source line shall be eligible for being part
@@ -196,7 +196,7 @@ thereof) serves as more than preprocessing token separation. White space
 can appear within a preprocessing token only as part of a header name or
 between the quotation characters in a character literal or string
 literal.</p></div><div class='para' id='pptoken-3'><div class='marginalizedparent'><a class='marginalized' href='#pptoken-3'>3</a></div><p >If the input stream has been parsed into preprocessing tokens up to a
-given character:</p><ul ><li ><p >If the next character begins a sequence of characters that could be the prefix
+given character:</p><ul ><li ><p ><span class='indexparent'><a class='index' id='literal!string!raw'></a></span></p><p >If the next character begins a sequence of characters that could be the prefix
 and initial double quote of a raw string literal, such as <span class='texttt'>R"</span>, the next preprocessing
 token shall be a raw string literal. Between the initial and final
 double quote characters of the raw string, any transformations performed in phases
@@ -809,7 +809,7 @@ as in
 <span class='texttt'>UR"zzz(...)zzz"</span>,
 <span class='texttt'>L"..."</span>,
 or <span class='texttt'>LR"(...)"</span>,
-respectively.</p></div><div class='para' id='string-2'><div class='marginalizedparent'><a class='marginalized' href='#string-2'>2</a></div><p >A <i ><a href='lex.string#string-literal'>string-literal</a></i> that has an <span class='texttt'>R</span> in the prefix is a <a id='raw string literal'><i>raw string literal</i></a>. The
+respectively.</p></div><div class='para' id='string-2'><div class='marginalizedparent'><a class='marginalized' href='#string-2'>2</a></div><p ><span class='indexparent'><a class='index' id='literal!string!raw'></a></span>A <i ><a href='lex.string#string-literal'>string-literal</a></i> that has an <span class='texttt'>R</span> in the prefix is a <a id='raw string literal'><i>raw string literal</i></a>. The
 <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i> serves as a delimiter. The terminating
 <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i> of a <i ><a href='lex.string#raw-string'>raw-string</a></i> is the same sequence of
 characters as the initial <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i>. A <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i>
