--- a/lex.literal.html
+++ b/lex.literal.html
@@ -359,7 +359,7 @@ as in
 <span class='texttt'>UR"zzz(...)zzz"</span>,
 <span class='texttt'>L"..."</span>,
 or <span class='texttt'>LR"(...)"</span>,
-respectively.</p></div><div class='para' id='lex.string-2'><div class='marginalizedparent'><a class='marginalized' href='#lex.string-2'>2</a></div><p >A <i ><a href='lex.string#string-literal'>string-literal</a></i> that has an <span class='texttt'>R</span> in the prefix is a <a id='raw string literal'><i>raw string literal</i></a>. The
+respectively.</p></div><div class='para' id='lex.string-2'><div class='marginalizedparent'><a class='marginalized' href='#lex.string-2'>2</a></div><p ><span class='indexparent'><a class='index' id='literal!string!raw'></a></span>A <i ><a href='lex.string#string-literal'>string-literal</a></i> that has an <span class='texttt'>R</span> in the prefix is a <a id='raw string literal'><i>raw string literal</i></a>. The
 <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i> serves as a delimiter. The terminating
 <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i> of a <i ><a href='lex.string#raw-string'>raw-string</a></i> is the same sequence of
 characters as the initial <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i>. A <i ><a href='lex.string#d-char-sequence'>d-char-sequence</a></i>
