--- a/lex.phases.html
+++ b/lex.phases.html
@@ -8,11 +8,11 @@ Any
 source file character not in the basic source character
 set (<a href='lex.charset'>[lex.charset]</a>) is replaced by the
 <span class='indexparent'><a class='index' id='universal character name'></a></span><i ><a href='lex.charset#universal-character-name'>universal-character-name</a></i> that
-designates that character. (An implementation may use any internal
+designates that character. An implementation may use any internal
 encoding, so long as an actual extended character encountered in the
 source file, and the same extended character expressed in the source
 file as a <i ><a href='lex.charset#universal-character-name'>universal-character-name</a></i> (e.g., using the <span class='texttt'>\uXXXX</span> notation), are handled equivalently
-except where this replacement is reverted in a raw string literal.)</p><p ><span class='indexparent'><a class='index' id='line splicing'></a></span></p></li><li ><p >Each instance of a backslash character (\)
+except where this replacement is reverted (<a href='lex.pptoken'>[lex.pptoken]</a>) in a raw string literal.</p><p ><span class='indexparent'><a class='index' id='line splicing'></a></span></p></li><li ><p >Each instance of a backslash character (\)
 immediately followed by a new-line character is deleted, splicing
 physical source lines to form logical source lines. Only the last
 backslash on any physical source line shall be eligible for being part
