--- a/numeric.ops.html
+++ b/numeric.ops.html
@@ -267,7 +267,7 @@ template &lt;class InputIterator1, class InputIterator2, class T&gt;
 template &lt;class InputIterator1, class InputIterator2, class T,
           class BinaryOperation1, class BinaryOperation2&gt;
   T inner_product(InputIterator1 first1, InputIterator1 last1,
-                  Inputgterator2 first2, T init,
+                  InputIterator2 first2, T init,
                   BinaryOperation1 binary_op1,
                   BinaryOperation2 binary_op2);
 </code></p><div class='itemdescr'></div><div class='para' id='inner.product-1'><div class='marginalizedparent'><a class='marginalized' href='#inner.product-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i>
