--- a/cpp.predefined.html
+++ b/cpp.predefined.html
@@ -19,7 +19,15 @@ literal).<a class='footnotenum' href='#footnote-156'>156</a></p><p ><span class=
 The presumed line number (within the current source file) of the current source line
 (an integer literal).<a class='footnotenum' href='#footnote-157'>157</a></p><p ><span class='indexparent'><a class='index' id='__STDC_HOSTED__'></a></span><span class='indexparent'><a class='index' id='__STDC_HOSTED__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDC_HOSTED__</span><br/>
 The integer literal <span class='texttt'>1</span> if the implementation is a hosted
-implementation or the integer literal <span class='texttt'>0</span> if it is not.</p><p ><span class='indexparent'><a class='index' id='__TIME__'></a></span></p></li><li ><p ><span class='texttt'>__TIME__</span><br/>
+implementation or the integer literal <span class='texttt'>0</span> if it is not.</p><p ><span class='indexparent'><a class='index' id='__STDCPP_DEFAULT_NEW_ALIGNMENT__'></a></span><span class='indexparent'><a class='index' id='__STDCPP_DEFAULT_NEW_ALIGNMENT__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDCPP_DEFAULT_NEW_ALIGNMENT__</span><br/>
+An integer literal of type <span class='texttt'>std<span class='discretionary'></span>::<span class='discretionary'></span>size_t</span>
+whose value is the alignment guaranteed
+by a call to <span class='texttt'>operator new(std::size_t)</span>
+or <span class='texttt'>operator new[](std::size_t)</span>.
+[&nbsp;<i>Note:</i><span class='space'></span>
+Larger alignments will be passed to
+<span class='texttt'>operator new(std::size_t, std::align_val_t)</span>, etc. (<a href='expr.new'>[expr.new]</a>).
+<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='__TIME__'></a></span></p></li><li ><p ><span class='texttt'>__TIME__</span><br/>
 The time of translation of the source file:
 a character string literal of the form
 <span class='texttt'>"hh:mm:ss"</span>
@@ -42,15 +50,7 @@ If this symbol is defined, then every character in the Unicode required set, whe
 stored in an object of type <span class='texttt'>wchar_t</span>, has the same value as the short identifier
 of that character. The <a id='Unicode required set'><i>Unicode required set</i></a> consists of all
 the characters that are defined by ISO/IEC 10646, along with
-all amendments and technical corrigenda as of the specified year and month.</p><p ><span class='indexparent'><a class='index' id='__STDCPP_DEFAULT_NEW_ALIGNMENT__'></a></span><span class='indexparent'><a class='index' id='__STDCPP_DEFAULT_NEW_ALIGNMENT__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDCPP_DEFAULT_NEW_ALIGNMENT__</span><br/>
-An integer literal of type <span class='texttt'>std<span class='discretionary'></span>::<span class='discretionary'></span>size_t</span>
-whose value is the alignment guaranteed
-by a call to <span class='texttt'>operator new(std::size_t)</span>
-or <span class='texttt'>operator new[](std::size_t)</span>.
-[&nbsp;<i>Note:</i><span class='space'></span>
-Larger alignments will be passed to
-<span class='texttt'>operator new(std::size_t, std::align_val_t)</span>, etc. (<a href='expr.new'>[expr.new]</a>).
-<i>&nbsp;—&nbsp;end note</i>&nbsp;]</p><p ><span class='indexparent'><a class='index' id='__STDCPP_STRICT_POINTER_SAFETY__'></a></span><span class='indexparent'><a class='index' id='__STDCPP_STRICT_POINTER_SAFETY__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDCPP_STRICT_POINTER_SAFETY__</span><br/>
+all amendments and technical corrigenda as of the specified year and month.</p><p ><span class='indexparent'><a class='index' id='__STDCPP_STRICT_POINTER_SAFETY__'></a></span><span class='indexparent'><a class='index' id='__STDCPP_STRICT_POINTER_SAFETY__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDCPP_STRICT_POINTER_SAFETY__</span><br/>
 Defined, and has the value integer literal 1, if and only if the implementation
 has strict pointer safety (<a href='basic.stc.dynamic.safety'>[basic.stc.dynamic.safety]</a>).</p><p ><span class='indexparent'><a class='index' id='__STDCPP_THREADS__'></a></span><span class='indexparent'><a class='index' id='__STDCPP_THREADS__!implementation-defined'></a></span></p></li><li ><p ><span class='texttt'>__STDCPP_THREADS__</span><br/>
 Defined, and has the value integer literal 1, if and only if a program
