--- a/library.html
+++ b/library.html
@@ -1332,7 +1332,7 @@ implementation to designate that function signature with
 <span class='indexparent'><a class='index' id='linkage!external'></a></span>is reserved to the implementation for use as a name with
 <span class='indexparent'><a class='index' id='header!C'></a></span><span class='indexparent'><a class='index' id='extern "C"'></a></span><span class='texttt'>extern "C"</span>
 linkage,
-both in namespace std and in the global namespace.</p></div><div class='para' id='extern.names-4'><div class='marginalizedparent'><a class='marginalized' href='#extern.names-4'>4</a></div><p >Each function signature from the C standard library declared with
+both in namespace <span class='texttt'>std</span> and in the global namespace.</p></div><div class='para' id='extern.names-4'><div class='marginalizedparent'><a class='marginalized' href='#extern.names-4'>4</a></div><p >Each function signature from the C standard library declared with
 <span class='indexparent'><a class='index' id='linkage!external'></a></span>external linkage
 is reserved to the implementation for use as
 a function signature with both
